--- a/css/styles.css
+++ b/css/styles.css
@@ -19,7 +19,9 @@
 	--blue: #0a61ae;
 	--blue-100: #e2f8ff;
 	--blue-400: #61dafb;
+	--blue-600: #ceedf6;
 	--blue-800: #0a61ae;
+	--gold-800: #f8b706;
 }
 
 html {
@@ -292,21 +294,23 @@ h2 {
 	}
 }
 h3 {
-	font-size: 32px;
+	font-size: 28px;
 	font-weight: 600;
 	line-height: 1;
 	color: var(--base-800);
-	margin-bottom: 20px;
+	margin-top: 5px;
+	margin-bottom: 10px;
 }
 .description-box {
 	display: flex;
 	justify-content: flex-start;
 	align-items: center;
-	gap: 3px;
+	border-left: 8px solid var(--gold-800);
+	padding: 0px 5px;
 	small {
 		font-size: 1.2rem;
 		font-weight: 900;
-		margin: 10px 10px 20px 0px;
+		margin: 6px 10px 10px 0px;
 	}
 }
 .skills {
@@ -346,20 +350,25 @@ h3 {
 			flex-direction: column;
 			justify-content: space-between;
 			align-items: flex-start;
+			.skills-header {
+				padding: 10px;
+			}
 			p {
-				margin: 10px 10px 20px 0px;
+				margin: 6px 0px 10px 0px;
 			}
 			ul {
 				list-style-type: none;
-				gap: 10px;
-				margin-right: 10px;
-				margin-bottom: 20px;
+				gap: 5px;
+				margin-top: 15px;
+				margin-bottom: 15px;
+				text-align: justify;
+
 				li {
 					display: inline-block;
 					background-color: var(--blue-400);
-					padding: 3px 8px;
-					border-radius: 8px;
-					margin-bottom: 8px;
+					padding: 5px 10px;
+					border-radius: 10px;
+					margin-bottom: 10px;
 					font-size: 0.75em;
 				}
 			}
@@ -728,7 +737,7 @@ h3 {
 /* The actual timeline (the vertical ruler) */
 .timeline {
 	position: relative;
-	/* max-width: 1444px; */
+	max-width: 722px;
 	margin: 0 auto;
 }
 
@@ -738,7 +747,7 @@ h3 {
 	position: absolute;
 	width: 4px;
 	background-color: rgb(11, 11, 11);
-	top: 0;
+	top: 15px;
 	bottom: 0;
 	left: 0px;
 	margin-left: -1px;
@@ -746,7 +755,7 @@ h3 {
 
 /* Container around content */
 .career_container {
-	padding: 2px 2px 2px 25px;
+	padding: 2px 2px 10px 25px;
 	position: relative;
 	background-color: inherit;
 	width: 100%;
@@ -756,12 +765,12 @@ h3 {
 .career_container::after {
 	content: '';
 	position: absolute;
-	width: 10px;
-	height: 10px;
+	width: 15px;
+	height: 15px;
 	right: -16px;
-	background-color: rgb(241, 238, 238);
+	background-color: var(--gold-800);
 	border: 2px solid #0d0a08;
-	top: 10px;
+	top: 12px;
 	border-radius: 50%;
 	z-index: 1;
 }
@@ -771,7 +780,7 @@ h3 {
 	content: ' ';
 	height: 0;
 	position: absolute;
-	top: 5px;
+	top: 10px;
 	width: 0;
 	z-index: 1;
 	left: 16px;
@@ -782,20 +791,21 @@ h3 {
 
 /* Fix the circle for containers on the right side */
 .right::after {
-	left: -4px;
+	left: -6px;
 }
 
 /* The actual content */
 .content {
 	padding: 1px 10px;
-	background-color: rgb(116, 144, 152);
+	background-color: inherit;
 	position: relative;
-	border-radius: 6px;
+	border-radius: 10px;
 	display: flex;
 	flex-direction: column;
 	justify-content: flex-start;
 	align-items: left;
 	justify-content: center;
+	background-color: var(--blue-600);
 
 	span {
 		display: block;
@@ -819,5 +829,7 @@ h3 {
 
 	.job_description {
 		margin: 8px 0;
+		border-left: 5px solid var(--gold-800);
+		padding: 5px;
 	}
 }
